fix: Enhance responsive design for date picker; adjust presets height and overflow behavior

--- a/src/index.css
+++ b/src/index.css
@@ -101,3 +101,26 @@ table tr:nth-child(2n) td {
 table tr:nth-child(2n+1) td {
   background-color: #FFFFFF;
 }
+
+.ant-picker-panel-container {
+  .ant-picker-presets {
+      min-height: 25rem !important;
+  }
+  @media (max-width: 800px) {
+      overflow: scroll !important;
+      height: 400px;
+      .ant-picker-panel-layout {
+          flex-direction: column !important;
+
+          .ant-picker-presets {
+              max-width: 100% !important;
+              min-height: 10rem !important;
+          }
+
+          .ant-picker-panels,
+          .ant-picker-datetime-panel {
+              flex-direction: column !important;
+          }
+      }
+  }
+}
